cleaned up script code and removed console.logs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button onclick="passwordGenerator.writePassword()" id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn" onclick="passwordGenerator.writePassword()" >Generate Password</button>
         </div>
       </div>
     </div>
